tests/ui/structs-enums/recover-enum-with-bad-where.stderr
error: expected one of `#`, `{`, lifetime, or type, found `:`
  --> $DIR/recover-enum-with-bad-where.rs:2:6
   |
LL | pub enum Foo<T>
   |          --- while parsing this enum
LL | where:
   |      ^ expected one of `#`, `{`, lifetime, or type

error: aborting due to 1 previous error

