tests/ui/structs-enums/recover-enum-with-bad-where.rs
pub enum Foo<T>
where:
//~^ ERROR expected one of `#`, `{`, lifetime, or type, found `:`
    T: Missing, {}

fn main() {}
